--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\KayitOlController.cs" />
     <Compile Include="Controllers\KitapController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MesajlarController.cs" />
     <Compile Include="Controllers\OduncController.cs" />
     <Compile Include="Controllers\PanelimController.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
@@ -233,6 +234,9 @@
       <DependentUpon>EnSonModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entity\TBLKITAP.cs">
+      <DependentUpon>EnSonModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Entity\TBLMESAJLAR.cs">
       <DependentUpon>EnSonModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entity\TBLPERSONEL.cs">
@@ -631,6 +635,10 @@
     <Content Include="webpanel\vendor\jquery\jquery.slim.min.map" />
     <Content Include="Views\Shared\_LayoutPanel.cshtml" />
     <Content Include="Views\Panelim\Index.cshtml" />
+    <Content Include="Views\Mesajlar\Index.cshtml" />
+    <Content Include="Views\Mesajlar\YeniMesaj.cshtml" />
+    <Content Include="Views\Mesajlar\Giden.cshtml" />
+    <Content Include="Views\Panelim\Kitaplarim.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
